2005-05-26  Jim Meyering  <jim@meyering.net>

	* Version 5.3.1.

	* src/expr.c (toarith): Fix a sign error introduced on 2005-01-14.
	Reported by David Alan Gilbert.
	* tests/expr/basic: Add tests using arithmetic on negative integers.

2005-05-19  Jim Meyering  <jim@meyering.net>

	* src/remove.c (AD_mark_helper, AD_mark_current_as_unremovable):
	Remove inaccurate-but-harmless `const' attributes.

	* src/join.c (decode_field_spec): Add an abort after
	`error (EXIT_FAILURE, ...' to avoid a gcc warning in caller,
	about variables being used uninitialized.

2005-05-18  Paul Eggert  <eggert@cs.ucla.edu>

	* configure.ac: Add copyright notice.  gl_LIB_CHECK -> cu_LIB_CHECK.
	* src/Makefile.am: Add copyright notice.
	(factor_LDADD): Remove, as factor no longer needs sqrt.
	* src/hostname.c: Remove test for HAVE_LIMITS_H; we can assume
	it's always true now.

2005-05-16  Paul Eggert  <eggert@cs.ucla.edu>

	Fix Cygwin porting problem reported by Eric Blake.
	* src/remove.c (DT_IS_DIR): Remove.
	(DT_IS_KNOWN, DT_MUST_BE): New macros.
	(remove_entry): Use them.

2005-05-14  Paul Eggert  <eggert@cs.ucla.edu>

	* src/remove.c: Include unlinkdir.h.
	(UNLINK_CAN_UNLINK_DIRS): Remove.
	(remove_entry): Use cannot_unlink_dirs () rather than
	UNLINK_CAN_UNLINK_DIRS.

2005-05-14  Jim Meyering  <jim@meyering.net>

	Update FSF postal mail address.
	* Makefile.maint, Makefile.cfg, gnupload
	* src/basename.c, src/cat.c, src/checksum.h, src/chgrp.c
	* src/chmod.c, src/chown-core.c, src/chown-core.h, src/chown.c
	* src/chroot.c, src/cksum.c, src/comm.c, src/copy.c, src/copy.h
	* src/cp-hash.c, src/cp-hash.h, src/cp.c, src/csplit.c, src/cut.c
	* src/date.c, src/dcgen, src/dd.c, src/df.c, src/dircolors.c
	* src/dirname.c, src/du.c, src/echo.c, src/env.c, src/expand.c
	* src/expr.c, src/factor.c, src/fmt.c, src/fold.c, src/fs.h
	* src/groups.sh, src/head.c, src/hostid.c, src/hostname.c, src/id.c
	* src/install.c, src/join.c, src/kill.c, src/lbracket.c, src/link.c